# nxdk_pgraph_tests

./: .clang-format  .gdbinit  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  debug_output.h  depth_format_tests.cpp  depth_format_tests.h  main.c  main.cpp  math3d.c  math3d.h  menu_item.cpp  menu_item.h  nxdk_ext.h  pbkit_ext.cpp  pbkit_ext.h  prewarm-nxdk.sh  requirements.txt  test_driver.cpp  test_driver.h  test_host.cpp  test_host.h  texture_format.cpp  texture_format.h  texture_format_tests.cpp  texture_format_tests.h  vertex_buffer.cpp  vertex_buffer.h  verts.h  vs.vs.cg
docs/: annotated.html  annotated_dup.js  classes.html  dir_0a4b4be470ccb3aa51643a03ee90aa9a.html  dir_0a4b4be470ccb3aa51643a03ee90aa9a.js  dir_0a4b4be470ccb3aa51643a03ee90aa9a_dep.map  dir_0a4b4be470ccb3aa51643a03ee90aa9a_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_bdeba5f06b852fec80257c0bf4c3c36e.html  dir_bdeba5f06b852fec80257c0bf4c3c36e.js  dir_bdeba5f06b852fec80257c0bf4c3c36e_dep.map  dir_bdeba5f06b852fec80257c0bf4c3c36e_dep.md5  dir_d93a1d4020dea85bb71b237545b5e722.html  dir_d93a1d4020dea85bb71b237545b5e722.js  dir_d93a1d4020dea85bb71b237545b5e722_dep.map  dir_d93a1d4020dea85bb71b237545b5e722_dep.md5  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_enum.html  functions_eval.html  functions_f.html  functions_func.html  functions_func.js  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_i.html  functions_func_l.html  functions_func_m.html  functions_func_n.html  functions_func_o.html  (+132 more)
githooks/: pre-commit
resources/: sample-config.json  verts.h
shaders/: orthographic_vertex_shader.cpp  orthographic_vertex_shader.h  perspective_vertex_shader.cpp  perspective_vertex_shader.h  pixelshader.ps.cg  precalculated_vertex_shader.cpp  precalculated_vertex_shader.h  precalculated_vertex_shader.vs.cg  projection_vertex_shader.cpp  projection_vertex_shader.h  projection_vertex_shader.vs.cg  shader_program.cpp  shader_program.h  untextured_pixelshader.ps.cg
src/: CMakeLists.txt  configure.h.in  dds_image.cpp  dds_image.h  debug_output.cpp  debug_output.h  file_util.cpp  file_util.h  ftp_logger.cpp  ftp_logger.h  image_resource.cpp  image_resource.h  light.cpp  light.h  logger.cpp  logger.h  main.cpp  math3d.c  math3d.h  menu_item.cpp  menu_item.h  nxdk_ext.h  pbkit_ext.cpp  pbkit_ext.h  pgraph_diff_token.cpp  pgraph_diff_token.h  pushbuffer.cpp  pushbuffer.h  pvideo_control.cpp  pvideo_control.h  runtime_config.cpp  runtime_config.h  test_driver.cpp  test_driver.h  test_host.cpp  test_host.h  texture_format.cpp  texture_format.h  texture_generator.cpp  texture_generator.h  (+4 more)
src/models/: distorted_cylinder.cpp  distorted_cylinder.h  distorted_cylinder_mesh.h  flat_grid.cpp  flat_grid.h  flat_grid_mesh.h  flat_grid_model.cpp  flat_grid_model.h  flat_mesh_grid_model.cpp  flat_mesh_grid_model.h  icosphere.cpp  icosphere.h  icosphere_mesh.h  light_control_test_mesh_cone_mesh.h  light_control_test_mesh_cone_model.cpp  light_control_test_mesh_cone_model.h  light_control_test_mesh_cylinder_mesh.h  light_control_test_mesh_cylinder_model.cpp  light_control_test_mesh_cylinder_model.h  light_control_test_mesh_sphere_mesh.h  light_control_test_mesh_sphere_model.cpp  light_control_test_mesh_sphere_model.h  light_control_test_mesh_suzanne_mesh.h  light_control_test_mesh_suzanne_model.cpp  light_control_test_mesh_suzanne_model.h  light_control_test_mesh_torus_mesh.h  light_control_test_mesh_torus_model.cpp  light_control_test_mesh_torus_model.h  model_builder.cpp  model_builder.h  single_quad.cpp  single_quad.h  single_quad_mesh.h
src/shaders/: attribute_carryover_test.vs.cg  attribute_carryover_tests.vsh  attribute_explicit_setter_tests.vs.cg  dp4_test.vsh  fixed_function_approximation_shader.cpp  fixed_function_approximation_shader.h  fixed_function_approximation_shader.vsh  fog_defaults_test.vs.cg  fog_infinite_fogc_test.vs.cg  fog_infinite_fogc_test.vsh  fog_vec4_unset.vs.cg  fog_vec4_unset.vsh  fog_vec4_w.vs.cg  fog_vec4_w.vsh  fog_vec4_w_x.vsh  fog_vec4_w_y.vsh  fog_vec4_w_z_y_x.vsh  fog_vec4_wx.vs.cg  fog_vec4_wy.vs.cg  fog_vec4_wy.vsh  fog_vec4_wzyx.vs.cg  fog_vec4_wzyx.vsh  fog_vec4_x.vs.cg  fog_vec4_x.vsh  fog_vec4_x_y_z_w.vsh  fog_vec4_xw.vsh  fog_vec4_xy.vsh  fog_vec4_xyz.vsh  fog_vec4_xyzw.vs.cg  fog_vec4_xyzw.vsh  fog_vec4_xz.vsh  fog_vec4_xzw.vsh  fog_vec4_y.vs.cg  fog_vec4_y.vsh  fog_vec4_yw.vsh  fog_vec4_yz.vsh  fog_vec4_yzw.vsh  fog_vec4_z.vs.cg  fog_vec4_z.vsh  fog_vec4_zw.vsh  (+38 more)
src/tests/: alpha_func_tests.cpp  alpha_func_tests.h  antialiasing_tests.cpp  antialiasing_tests.h  attribute_carryover_tests.cpp  attribute_carryover_tests.h  attribute_clamping_tests.cpp  attribute_clamping_tests.h  attribute_explicit_setter_tests.cpp  attribute_explicit_setter_tests.h  attribute_float_tests.cpp  attribute_float_tests.h  blend_surface_tests.cpp  blend_surface_tests.h  blend_tests.cpp  blend_tests.h  bump_env_lum_tests.cpp  bump_env_lum_tests.h  bump_map_tests.cpp  bump_map_tests.h  clear_tests.cpp  clear_tests.h  clipping_precision_tests.cpp  clipping_precision_tests.h  color_key_tests.cpp  color_key_tests.h  color_mask_blend_tests.cpp  color_mask_blend_tests.h  color_zeta_disable_tests.cpp  color_zeta_disable_tests.h  color_zeta_overlap_tests.cpp  color_zeta_overlap_tests.h  combiner_tests.cpp  combiner_tests.h  context_switch_tests.cpp  context_switch_tests.h  degenerate_begin_end_tests.cpp  degenerate_begin_end_tests.h  depth_clamp_tests.cpp  depth_clamp_tests.h  (+172 more)
tests/: depth_format_tests.cpp  depth_format_tests.h  (+20 more)
tests/host/: CMakeLists.txt  test_runtime_config.cpp
tests/host/stubs/: SDL.h  nv2astate.h  nxdk_ext.h  pushbuffer.h  texture_format.h  texture_stage.h  vertex_buffer.h  windows.h  xbox_types.h
tests/host/stubs/hal/: debug.h
tests/host/stubs/pbkit/: nv_regs.h  pbkit.h
tests/host/stubs/xboxkrnl/: xboxdef.h
(+1797 files in other folders)
